@@ -43,6 +43,7 @@
 
 0.16.15 release
 
+	* fix mingw time_t 64 bit issue
 	* fix use of SetFileValidData on windows
 	* fix crash when using full allocation storage mode
 	* improve error_code and error_category support in python bindings
